--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -16,7 +16,7 @@
             android:id="@+id/profile_root_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/profile_background"
+            android:background="@color/blackText"
             android:fillViewport="true">
 
             <androidx.constraintlayout.motion.widget.MotionLayout
